syntax = "proto3";

package fileservice;

option go_package = "./pb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message File {
    string file_name = 1;
}

message FileExists {
    bool exists = 1;
}

message FileMetadata {
    string file_name = 1;
    uint64 size = 2;
    google.protobuf.Timestamp modified_ts = 3;
}

service FileService {
  rpc GetFileMetaData(File) returns (FileMetadata) {}
  rpc Exists(File) returns (google.protobuf.Empty) {}
}

